RESOLVED FIXED309870
[YARR] Greedy/non-greedy non-BMP character class should not advance index past end-of-input
https://bugs.webkit.org/show_bug.cgi?id=309870
Summary [YARR] Greedy/non-greedy non-BMP character class should not advance index pas...
Sosuke Suzuki
Reported 2026-03-12 23:00:07 PDT
...
Attachments
Sosuke Suzuki
Comment 1 2026-03-12 23:01:26 PDT
Radar WebKit Bug Importer
Comment 2 2026-03-19 23:00:14 PDT
EWS
Comment 3 2026-03-26 00:08:37 PDT
Committed 309968@main (ca5992c5df21): <https://commits.webkit.org/309968@main> Reviewed commits have been landed. Closing PR #60537 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.