[YARR] Greedy/non-greedy non-BMP character class should not advance index past end-of-input https://bugs.webkit.org/show_bug.cgi?id=309870

Reviewed by Yusuke Suzuki.

advanceIndexAfterCharacterClassTermMatch's fixed-width fast path
adds 2 to the index unconditionally for non-BMP-only classes, which
can leave index at length+1 after the last iteration. A subsequent
fixed-character term then reads one unit past the end of input.

The mixed-width else branch already splits this into
+1 -> atEndOfInput -> +1; do the same here. Both callers already
roll back via failuresAfterIncrementingIndex. This also makes
generateCharacterClassGreedy's checkNotEnoughInput(1) pre-check
redundant.

Also drop a redundant !term->invert() already covered by
isFixedWidthCharacterClass().

Test: JSTests/stress/regexp-unicode-nonbmp-fixed-width-charclass-index-overshoot.js

* JSTests/stress/regexp-unicode-nonbmp-fixed-width-charclass-index-overshoot.js: Added.
(shouldBe):
(makeSubstring):
* Source/JavaScriptCore/yarr/YarrJIT.cpp:

Canonical link: https://commits.webkit.org/309968@main